Document Gradle native access option for agents
Require Gradle invocations in this repository to set GRADLE_OPTS with --enable-native-access=ALL-UNNAMED so agent-run commands avoid early JVM native-access warnings.

Assisted-by: codex:gpt-5.5