@@ -35,6 +35,7 @@ These rules apply to all Java code written or modified in this repository.
 ## Gradle
 
 - When invoking Gradle in this repository, always set `GRADLE_USER_HOME` to the workspace-local `.gradle-user-home` directory.
+- When invoking Gradle in this repository, always set `GRADLE_OPTS` to `--enable-native-access=ALL-UNNAMED` for the command.
 - Prefer commands such as `./gradlew -g .gradle-user-home ...` or the equivalent environment-variable-based configuration.
 - When running Gradle `test` tasks, use a higher timeout of ten minutes.
 
